updated geographic map

--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,7 @@
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "d3": "latest",
+    "d3-geo": "^3.1.1",
     "date-fns": "latest",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
@@ -57,10 +58,12 @@
     "react-dom": "^19",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
+    "react-simple-maps": "^3.0.0",
     "recharts": "latest",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "topojson-client": "^3.1.0",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
   },
