--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js",
+    "test:gemini": "node test-gemini.js",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
@@ -19,12 +20,15 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@prisma/client": "^6.10.1",
+    "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
+    "node-fetch": "^3.3.2",
     "prisma": "^6.10.1"
   }
 }
