--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^3.3.2",
+    "pdfkit": "^0.17.1",
     "prisma": "^6.10.1"
   }
 }
